--- a/app/globals.css
+++ b/app/globals.css
@@ -120,3 +120,11 @@ body {
 .text-gradient {
     @apply bg-clip-text text-transparent bg-gradient-to-r from-slate-900 to-slate-600;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+.no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
